# TinyFeeds

./: Cargo.toml  README.md  build.sh  tinyfeeds.desktop
src/: args.rs  config.rs  fetcher.rs  image_loader.rs  main.rs  models.rs  ui.rs
src/ui/: markdown.rs  mod.rs  theme.rs  window.rs
