[package]
name = "tinyfeeds"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
frostmark = "0.3.0"
iced = { version = "0.14.0", features = ["tokio"] }
reqwest = "0.13.3"
rss = "2.0.12"
webbrowser = "1.2.1"

[profile.release]
opt-level = "z"  # Optimize for size.
strip = true
lto = true
panic = "abort"
codegen-units = 1

[package.metadata.appimage]
icon = "icon.png"
desktop_entry = "tinyfeeds.desktop"
