[package]
name = "TinyFeeds"
version = "0.1.0"
edition = "2024"
description = "Optimized, opinionated and minimal RSS feed reader built with Rust and Iced."
homepage = "https://thatalexguy.dev"
license = "GPL-3.0-only"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
feedparser-rs = "0.5.3"
reqwest = "0.13.3"
webbrowser = "1.2.1"
gtk4 = "0.11"
libadwaita = { version = "0.9", features = ["v1_5"] }
tokio = { version = "1", features = ["full"] }
webkit6 = "0.6.1"

[profile.release]
opt-level = "z"  # Optimize for size.
strip = true
lto = true
panic = "abort"
codegen-units = 1

[package.metadata.appimage]
icon = "icon.png"
desktop_entry = "tinyfeeds.desktop"

[package.metadata.deb]
maintainer = "Alex White <hi@thatalexguy.dev>"
copyright = "2026, Alex White <hi@thatalexguy.dev>"
assets = [
  ["target/release/TinyFeeds", "usr/bin/tinyfeeds", "755"],
  ["tinyfeeds.desktop", "usr/share/applications/", "644"],
  ["tinyfeeds.png", "usr/share/icons/hicolor/256x256/apps/", "644"]
]
